# REINS

./: LICENSE  README.md  pyproject.toml
benchmark/: README.md  __init__.py  __main__.py  config.py  metrics.py  profiles.py  report.py  report_latex.py  runner.py  stats.py
benchmark/adapters/: README.md  __init__.py  _hermes_runner.py  base.py  hermes_agent.py  hermes_reins_loop.py  hermes_reins_runtime.py  high_agent.py  opencode.py  runtime_host.py  smoke.py
benchmark/evaluators/: __init__.py  (+5 more)
reins_bench/: README.md  __init__.py  compile_corpus.py  runner.py  schema.py  scoring.py  seed_loader.py
tests/: test_agent_loop.py  test_agent_protocol.py  test_cancel_stale_completion.py  test_config_llm_cli_agent.py  test_context_store.py  test_context_store_concurrency.py  test_controller_async_planner_dispatch.py  test_controller_cancel_event.py  test_controller_dedupe_and_completion.py  test_critical_path_refill.py  test_delivery_deadlock.py  test_dependency_predicate_terminal.py  test_final_candidate_max_iter.py  test_ledger_causal.py  test_ledger_publish_ordering.py  test_model_client_async.py  test_nogil.py  test_openai_streaming_incremental.py  test_paths_overlap.py  test_planner_stale_seconds_config.py  test_planner_stuck_circuit_breaker.py  test_responses_stream_reorder.py  test_responses_streaming_incremental.py  test_runtime.py  test_shutdown_phase3_callbacks.py  test_sub_agent.py  test_suspend_types.py  test_terminal_resource_access.py  test_tools_and_agents.py  test_v030_features.py  test_wait_delivery_lost_wakeup.py  test_worker_dispatches_tool_calls.py
(+229 files in other folders)
