[project]
name = "reins"
version = "0.1.0"
description = "Resource-aware causal runtime and reference agent for parallel LLM tool execution on free-threaded CPython."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Reins Authors" }]
keywords = ["agent", "runtime", "scheduler", "free-threaded", "nogil", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.28.1,<1",
  "pyyaml>=6.0.2,<7",
  "prompt_toolkit>=3.0.52,<4",
  "rich>=14.3.3,<15",
  "tenacity>=9.1.4,<10",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
high-agent = "high_agent.cli.main:main"
reins-bench = "benchmark.runner:main"

[project.urls]
Source = "https://github.com/Youken/reins"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["reins*", "high_agent*", "benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
